--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body{
     margin:0;
     font-family:'Segoe UI',sans-serif;
-    background:linear-gradient(180deg,#0f2027,#203a43,#2c5364);
+    background:linear-gradient(180deg,#0b1a20,#152d35,#1e3b47);
     overflow-x:hidden;
     color:#333;
 }
@@ -21,56 +21,79 @@ body{
 }
 .estrella{
     position:absolute;
-    width:2px;
-    height:2px;
+    width:3px;
+    height:3px;
     background:white;
-    opacity:.8;
-    animation:caer linear infinite;
+    opacity:.6;
+    border-radius:50%;
+    animation:caer linear infinite, parpadear ease-in-out infinite alternate;
 }
 @keyframes caer{
-    from{transform:translateY(-10px)}
-    to{transform:translateY(110vh)}
+    from{transform:translateY(-10px); opacity:.8}
+    to{transform:translateY(110vh); opacity:0}
+}
+@keyframes parpadear{
+    from{box-shadow:0 0 2px white}
+    to{box-shadow:0 0 8px white}
 }
 h1{
     text-align:center;
     color:white;
-    margin:20px;
+    margin:30px 20px;
+    text-shadow:0 0 15px rgba(255,255,255,.3);
+    font-size:2.2rem;
 }
 .dashboard{
     max-width:1000px;
     margin:auto;
     display:grid;
     grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-    gap:15px;
+    gap:20px;
+    padding:0 20px;
 }
 .card{
     background:white;
-    padding:20px;
+    padding:25px;
     border-radius:15px;
     text-align:center;
-    box-shadow:0 10px 25px rgba(0,0,0,.3);
+    box-shadow:0 10px 30px rgba(0,0,0,.4);
+    transform:translateY(0);
+    transition:transform .3s ease, box-shadow .3s ease;
 }
-.card h3{margin:0;font-size:14px;color:#555}
-.card p{font-size:22px;font-weight:bold;margin-top:10px}
+.card:hover{
+    transform:translateY(-5px);
+    box-shadow:0 15px 35px rgba(0,0,0,.5);
+}
+.card h3{margin:0;font-size:15px;color:#2c5364; text-transform:uppercase; letter-spacing:.5px}
+.card p{font-size:28px;font-weight:bold;margin-top:10px; color:#152d35}
 .contenedor{
     max-width:1000px;
-    margin:30px auto;
+    margin:40px auto 60px;
     background:white;
-    padding:30px;
+    padding:35px;
     border-radius:20px;
+    box-shadow:0 15px 35px rgba(0,0,0,.3);
 }
-label{font-weight:bold}
+label{font-weight:bold; color:#152d35; display:block; margin-bottom:5px}
 input,select{
     width:100%;
-    padding:12px;
+    padding:12px 15px;
     margin:10px 0 20px;
     border-radius:8px;
-    border:1px solid #ccc;
+    border:1px solid #ddd;
+    font-size:1rem;
+    transition:border-color .3s ease;
+}
+input:focus,select:focus{
+    outline:none;
+    border-color:#2c5364;
+    box-shadow:0 0 5px rgba(44,83,100,.2);
 }
 .botones{
     display:grid;
     grid-template-columns:1fr 1fr;
-    gap:15px;
+    gap:20px;
+    margin-bottom:30px;
 }
 button{
     padding:14px;
@@ -78,29 +101,44 @@ button{
     border-radius:8px;
     cursor:pointer;
     font-size:15px;
+    font-weight:bold;
+    transition:transform .2s ease, box-shadow .2s ease;
 }
-.agregar{background:#27ae60;color:white}
-.excel{background:#16a085;color:white}
+button:hover{
+    transform:translateY(-2px);
+    box-shadow:0 5px 15px rgba(0,0,0,.2);
+}
+.agregar{background:#2ecc71;color:white}
+.excel{background:#1abc9c;color:white}
 table{
     width:100%;
     border-collapse:collapse;
     margin-top:25px;
+    border-radius:10px;
+    overflow:hidden;
 }
 th,td{
-    padding:12px;
-    border-bottom:1px solid #ddd;
+    padding:14px;
+    border-bottom:1px solid #eee;
     text-align:center;
 }
 th{
-    background:#2c3e50;
+    background:#1e3b47;
     color:white;
+    font-weight:bold;
+    text-transform:uppercase;
+    letter-spacing:.5px;
+}
+tr:hover{
+    background:#f8f9fa;
 }
 .acciones button{
     padding:6px 10px;
     margin:0 3px;
     border-radius:5px;
+    font-size:.9rem;
 }
-.editar{background:#f39c12;color:white}
+.editar{background:#f1c40f;color:white}
 .borrar{background:#e74c3c;color:white}
 </style>
 </head>
@@ -128,28 +166,28 @@ th{
 
 <div class="contenedor">
 
-<label>Tipo</label>
+<label>Tipo de Concepto</label>
 <select id="tipo">
-    <option value="material">Material (19%)</option>
-    <option value="mano">Mano de obra (0%)</option>
-    <option value="servicio">Servicio (19%)</option>
+    <option value="material">Material (IVA 19%)</option>
+    <option value="mano">Mano de Obra (IVA 0%)</option>
+    <option value="servicio">Servicio Profesional (IVA 19%)</option>
 </select>
 
-<label>Monto base ($ COP)</label>
-<input type="number" id="monto">
+<label>Monto Base ($ COP)</label>
+<input type="number" id="monto" min="0.01" step="0.01" placeholder="Ingresa el valor sin IVA">
 
 <div class="botones">
-    <button class="agregar" onclick="agregar()">Agregar</button>
-    <button class="excel" onclick="exportarExcel()">Exportar Excel</button>
+    <button class="agregar" onclick="agregar()">Agregar Concepto</button>
+    <button class="excel" onclick="exportarExcel()">Exportar a Excel</button>
 </div>
 
 <table>
 <thead>
 <tr>
-    <th>Tipo</th>
-    <th>Base</th>
-    <th>IVA</th>
-    <th>Total</th>
+    <th>Tipo de Concepto</th>
+    <th>Monto Base ($)</th>
+    <th>Valor IVA ($)</th>
+    <th>Total con IVA ($)</th>
     <th>Acciones</th>
 </tr>
 </thead>
@@ -161,7 +199,7 @@ th{
 <script>
 let datos = JSON.parse(localStorage.getItem("cuentasLuis")) || [];
 
-function f(n){ return n.toLocaleString('es-CO'); }
+function f(n){ return n.toLocaleString('es-CO', {minimumFractionDigits: 2, maximumFractionDigits: 2}); }
 
 function guardar(){
     localStorage.setItem("cuentasLuis", JSON.stringify(datos));
@@ -183,16 +221,21 @@ function recalcular(){
 
 function render(){
     tabla.innerHTML="";
+    const tipoTexto = {
+        material: "Material (IVA 19%)",
+        mano: "Mano de Obra (IVA 0%)",
+        servicio: "Servicio Profesional (IVA 19%)"
+    };
     datos.forEach((d,idx)=>{
         tabla.innerHTML+=`
         <tr>
-            <td>${d.tipo}</td>
+            <td>${tipoTexto[d.tipo]}</td>
             <td>$ ${f(d.base)}</td>
             <td>$ ${f(d.iva)}</td>
             <td>$ ${f(d.total)}</td>
             <td class="acciones">
-                <button class="editar" onclick="editar(${idx})">✏️</button>
-                <button class="borrar" onclick="borrar(${idx})">❌</button>
+                <button class="editar" onclick="editar(${idx})">✏️ Editar</button>
+                <button class="borrar" onclick="borrar(${idx})">❌ Borrar</button>
             </td>
         </tr>`;
     });
@@ -201,11 +244,11 @@ function render(){
 function agregar(){
     let tipo = document.getElementById("tipo").value;
     let base = parseFloat(document.getElementById("monto").value);
-    if(!base || base<=0) return alert("Monto inválido");
+    if(!base || base<=0) return alert("Por favor ingresa un monto válido mayor a cero");
 
     let ivaP = (tipo==="mano") ? 0 : 19;
-    let iva = base * ivaP / 100;
-    let total = base + iva;
+    let iva = parseFloat((base * ivaP / 100).toFixed(2));
+    let total = parseFloat((base + iva).toFixed(2));
 
     datos.push({tipo,base,iva,total});
     guardar();
@@ -213,18 +256,23 @@ function agregar(){
 }
 
 function borrar(i){
+    if(!confirm("¿Estás seguro de que quieres eliminar este concepto?")) return;
     datos.splice(i,1);
     guardar();
 }
 
 function editar(i){
-    let nuevo = prompt("Nuevo monto:", datos[i].base);
-    if(!nuevo) return;
-    nuevo = parseFloat(nuevo);
+    let nuevoMonto = prompt("Ingresa el nuevo monto base:", datos[i].base);
+    if(!nuevoMonto) return;
+    nuevoMonto = parseFloat(nuevoMonto);
+    if(!nuevoMonto || nuevoMonto<=0){
+        alert("Monto inválido, ingresa un valor mayor a cero");
+        return;
+    }
     let ivaP = (datos[i].tipo==="mano") ? 0 : 19;
-    datos[i].base = nuevo;
-    datos[i].iva = nuevo * ivaP / 100;
-    datos[i].total = datos[i].base + datos[i].iva;
+    datos[i].base = nuevoMonto;
+    datos[i].iva = parseFloat((nuevoMonto * ivaP / 100).toFixed(2));
+    datos[i].total = parseFloat((datos[i].base + datos[i].iva).toFixed(2));
     guardar();
 }
 
@@ -233,7 +281,7 @@ function exportarExcel(){
     let blob=new Blob([html],{type:'application/vnd.ms-excel'});
     let a=document.createElement("a");
     a.href=URL.createObjectURL(blob);
-    a.download="Pagina_de_Luis.xls";
+    a.download="Registro_Pagina_de_Luis.xls";
     a.click();
 }
 
@@ -242,6 +290,7 @@ for(let i=0;i<70;i++){
     s.className="estrella";
     s.style.left=Math.random()*100+"vw";
     s.style.animationDuration=(3+Math.random()*5)+"s";
+    s.style.animationDelay=(Math.random()*3)+"s";
     estrellas.appendChild(s);
 }
 
