--- a/index.html
+++ b/index.html
@@ -2,150 +2,370 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Página de Luis</title>
+<title>Página de Luis - Interactiva</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+/* === VARIABLES GENERALES === */
+:root {
+    --color-principal: #00E5FF;
+    --color-secundario: #FF00E5;
+    --color-terciario: #E5FF00;
+    --color-fondo: #000000;
+    --color-texto-claro: #FFFFFF;
+    --color-texto-oscuro: #1A1A1A;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body{
     margin:0;
     font-family:'Segoe UI',sans-serif;
-    background:linear-gradient(180deg,#0b1a20,#152d35,#1e3b47);
+    background-color: var(--color-fondo);
     overflow-x:hidden;
-    color:#333;
+    color:var(--color-texto-claro);
+    position: relative;
+    min-height: 100vh;
 }
-.estrellas{
-    position:fixed;
-    width:100%;
-    height:100%;
-    pointer-events:none;
+
+/* === ELEMENTOS INTERACTIVOS Y ANIMADOS === */
+.contenedor-elementos {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 0;
 }
-.estrella{
-    position:absolute;
-    width:3px;
-    height:3px;
-    background:white;
-    opacity:.6;
-    border-radius:50%;
-    animation:caer linear infinite, parpadear ease-in-out infinite alternate;
+
+.estrella-interactiva {
+    position: absolute;
+    background-color: transparent;
+    border: 1px solid var(--color-principal);
+    border-radius: 50%;
+    pointer-events: none;
+    animation: brillar-estrella ease-in-out infinite alternate, mover-estrella linear infinite;
 }
-@keyframes caer{
-    from{transform:translateY(-10px); opacity:.8}
-    to{transform:translateY(110vh); opacity:0}
+
+.estrella-interactiva::before,
+.estrella-interactiva::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: inherit;
+    border-radius: inherit;
+    transform: rotate(45deg);
 }
-@keyframes parpadear{
-    from{box-shadow:0 0 2px white}
-    to{box-shadow:0 0 8px white}
+
+@keyframes brillar-estrella {
+    from { 
+        box-shadow: 0 0 2px var(--color-principal); 
+        opacity: 0.5;
+        transform: scale(0.5);
+    }
+    to { 
+        box-shadow: 0 0 15px var(--color-principal), 0 0 30px var(--color-principal); 
+        opacity: 1;
+        transform: scale(1.2);
+    }
 }
+
+@keyframes mover-estrella {
+    0% { transform: translate(0, 0); }
+    25% { transform: translate(10px, -5px); }
+    50% { transform: translate(0, -10px); }
+    75% { transform: translate(-10px, -5px); }
+    100% { transform: translate(0, 0); }
+}
+
+.particula {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    border-radius: 50%;
+    opacity: 0.8;
+    animation: desaparecer-particula linear forwards;
+}
+
+@keyframes desaparecer-particula {
+    to { 
+        transform: translate(var(--dir-x), var(--dir-y)); 
+        opacity: 0;
+    }
+}
+
+/* === ONDAS DE FONDO ANIMADAS === */
+.onda-fondo {
+    position: fixed;
+    width: 200vw;
+    height: 200vw;
+    border-radius: 45%;
+    background: radial-gradient(circle, rgba(0,229,255,0.05) 0%, rgba(0,0,0,0) 70%);
+    animation: rotar-onda 60s linear infinite;
+    z-index: -1;
+}
+
+.onda-fondo:nth-child(2) {
+    background: radial-gradient(circle, rgba(255,0,229,0.05) 0%, rgba(0,0,0,0) 70%);
+    animation-duration: 80s;
+    animation-direction: reverse;
+}
+
+.onda-fondo:nth-child(3) {
+    background: radial-gradient(circle, rgba(229,255,0,0.05) 0%, rgba(0,0,0,0) 70%);
+    animation-duration: 100s;
+}
+
+@keyframes rotar-onda {
+    from { transform: rotate(0deg) translateY(20vh); }
+    to { transform: rotate(360deg) translateY(20vh); }
+}
+
+/* === TÍTULO PRINCIPAL ANIMADO === */
 h1{
     text-align:center;
-    color:white;
-    margin:30px 20px;
-    text-shadow:0 0 15px rgba(255,255,255,.3);
-    font-size:2.2rem;
+    margin:30px 10px;
+    font-size: clamp(2rem, 6vw, 3rem);
+    position: relative;
+    z-index: 1;
+    background: linear-gradient(90deg, var(--color-principal), var(--color-secundario), var(--color-terciario), var(--color-principal));
+    background-size: 300% 100%;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: deslizar-gradiente 8s ease infinite;
 }
+
+@keyframes deslizar-gradiente {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
+/* === DASHBOARD RESPONSIVO Y ANIMADO === */
 .dashboard{
-    max-width:1000px;
-    margin:auto;
+    max-width:1200px;
+    margin:0 auto 40px;
     display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-    gap:20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
     padding:0 20px;
+    position: relative;
+    z-index: 1;
 }
+
 .card{
-    background:white;
-    padding:25px;
-    border-radius:15px;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    padding: 25px;
+    border-radius: 15px;
     text-align:center;
-    box-shadow:0 10px 30px rgba(0,0,0,.4);
-    transform:translateY(0);
-    transition:transform .3s ease, box-shadow .3s ease;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    transition: all .4s ease;
+    transform: translateY(20px);
+    opacity: 0;
+    animation: aparecer-card 0.8s forwards;
 }
+
+.card:nth-child(1) { animation-delay: 0.2s; }
+.card:nth-child(2) { animation-delay: 0.4s; }
+.card:nth-child(3) { animation-delay: 0.6s; }
+
+@keyframes aparecer-card {
+    to { 
+        transform: translateY(0); 
+        opacity: 1;
+    }
+}
+
 .card:hover{
-    transform:translateY(-5px);
-    box-shadow:0 15px 35px rgba(0,0,0,.5);
+    transform: translateY(-8px) scale(1.02);
+    border-color: var(--color-principal);
+    box-shadow: 0 0 25px rgba(0, 229, 255, 0.3);
 }
-.card h3{margin:0;font-size:15px;color:#2c5364; text-transform:uppercase; letter-spacing:.5px}
-.card p{font-size:28px;font-weight:bold;margin-top:10px; color:#152d35}
+
+.card h3{
+    margin:0;
+    font-size: clamp(1rem, 2vw, 1.2rem);
+    color: rgba(255, 255, 255, 0.7);
+    text-transform:uppercase;
+    letter-spacing:.5px;
+    margin-bottom: 10px;
+}
+
+.card p{
+    font-size: clamp(1.8rem, 4vw, 2.5rem);
+    font-weight:bold;
+    background: linear-gradient(90deg, var(--color-principal), var(--color-secundario));
+    background-size: 200% 100%;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: deslizar-gradiente 4s ease infinite;
+}
+
+/* === CONTENEDOR PRINCIPAL === */
 .contenedor{
-    max-width:1000px;
-    margin:40px auto 60px;
-    background:white;
-    padding:35px;
-    border-radius:20px;
-    box-shadow:0 15px 35px rgba(0,0,0,.3);
+    max-width:1200px;
+    margin:0 auto 60px;
+    background: rgba(255, 255, 255, 0.03);
+    backdrop-filter: blur(15px);
+    padding: 30px;
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    position: relative;
+    z-index: 1;
+    transform: translateY(30px);
+    opacity: 0;
+    animation: aparecer-card 0.8s forwards 0.8s;
 }
-label{font-weight:bold; color:#152d35; display:block; margin-bottom:5px}
+
+label{
+    font-weight:bold;
+    color: rgba(255, 255, 255, 0.8);
+    display:block;
+    margin-bottom:8px;
+    font-size: clamp(0.9rem, 2vw, 1.1rem);
+}
+
 input,select{
     width:100%;
-    padding:12px 15px;
-    margin:10px 0 20px;
+    padding: 12px 15px;
+    margin:5px 0 20px;
     border-radius:8px;
-    border:1px solid #ddd;
-    font-size:1rem;
-    transition:border-color .3s ease;
+    border:1px solid rgba(255, 255, 255, 0.1);
+    background: rgba(0, 0, 0, 0.5);
+    color: var(--color-texto-claro);
+    font-size: clamp(0.9rem, 2vw, 1.1rem);
+    transition: all .3s ease;
 }
+
 input:focus,select:focus{
     outline:none;
-    border-color:#2c5364;
-    box-shadow:0 0 5px rgba(44,83,100,.2);
+    border-color: var(--color-principal);
+    box-shadow:0 0 15px rgba(0, 229, 255, 0.2);
 }
+
+/* === BOTONES ANIMADOS === */
 .botones{
     display:grid;
-    grid-template-columns:1fr 1fr;
-    gap:20px;
-    margin-bottom:30px;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 20px;
+    margin-bottom: 30px;
 }
+
 button{
-    padding:14px;
+    padding: 14px;
     border:none;
     border-radius:8px;
     cursor:pointer;
-    font-size:15px;
+    font-size: clamp(0.9rem, 2vw, 1.1rem);
     font-weight:bold;
-    transition:transform .2s ease, box-shadow .2s ease;
+    transition: all .3s ease;
+    position: relative;
+    overflow: hidden;
+    background: linear-gradient(45deg, var(--color-principal), var(--color-secundario));
+    color: var(--color-texto-oscuro);
+    pointer-events: auto;
 }
+
+button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+    animation: brillo-boton 3s infinite linear;
+}
+
 button:hover{
-    transform:translateY(-2px);
-    box-shadow:0 5px 15px rgba(0,0,0,.2);
+    transform: translateY(-3px) scale(1.03);
+    box-shadow: 0 0 30px rgba(0, 229, 255, 0.5);
 }
-.agregar{background:#2ecc71;color:white}
-.excel{background:#1abc9c;color:white}
+
+button.excel {
+    background: linear-gradient(45deg, var(--color-terciario), var(--color-secundario));
+}
+
+@keyframes brillo-boton {
+    100% { left: 100%; }
+}
+
+/* === TABLA RESPONSIVA Y ANIMADA === */
 table{
     width:100%;
     border-collapse:collapse;
-    margin-top:25px;
+    margin-top: 25px;
     border-radius:10px;
     overflow:hidden;
+    display: block;
+    overflow-x: auto;
+    max-width: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.1);
 }
+
 th,td{
-    padding:14px;
-    border-bottom:1px solid #eee;
+    padding: 12px;
+    border-bottom:1px solid rgba(255, 255, 255, 0.05);
     text-align:center;
+    font-size: clamp(0.8rem, 2vw, 1rem);
 }
+
 th{
-    background:#1e3b47;
-    color:white;
+    background: rgba(0, 0, 0, 0.7);
+    color: var(--color-texto-claro);
     font-weight:bold;
     text-transform:uppercase;
     letter-spacing:.5px;
+    white-space: nowrap;
 }
+
 tr:hover{
-    background:#f8f9fa;
+    background: rgba(0, 229, 255, 0.1);
+    transform: scale(1.01);
+    transition: transform 0.2s ease;
 }
+
 .acciones button{
-    padding:6px 10px;
+    padding: 6px 10px;
     margin:0 3px;
     border-radius:5px;
-    font-size:.9rem;
+    font-size: clamp(0.7rem, 1.5vw, 0.9rem);
+    background: linear-gradient(45deg, var(--color-terciario), var(--color-texto-oscuro));
 }
-.editar{background:#f1c40f;color:white}
-.borrar{background:#e74c3c;color:white}
+
+.acciones button.borrar {
+    background: linear-gradient(45deg, var(--color-secundario), var(--color-texto-oscuro));
+    color: var(--color-texto-claro);
+}
+
+/* === AJUSTES PARA PANTALLAS PEQUEÑAS === */
+@media screen and (max-width: 480px) {
+    .contenedor {
+        margin:0 15px 60px;
+        padding: 20px;
+    }
+
+    .dashboard {
+        padding:0 15px;
+    }
+}
 </style>
 </head>
 
 <body>
 
-<div class="estrellas" id="estrellas"></div>
+<!-- === ELEMENTOS ANIMADOS DE FONDO === -->
+<div class="onda-fondo"></div>
+<div class="onda-fondo"></div>
+<div class="onda-fondo"></div>
+<div class="contenedor-elementos" id="contenedorElementos"></div>
 
 <h1>Página de Luis</h1>
 
@@ -165,137 +385,57 @@ tr:hover{
 </div>
 
 <div class="contenedor">
+    <label>Tipo de Concepto</label>
+    <select id="tipo">
+        <option value="material">Material (IVA 19%)</option>
+        <option value="mano">Mano de Obra (IVA 0%)</option>
+        <option value="servicio">Servicio Profesional (IVA 19%)</option>
+    </select>
 
-<label>Tipo de Concepto</label>
-<select id="tipo">
-    <option value="material">Material (IVA 19%)</option>
-    <option value="mano">Mano de Obra (IVA 0%)</option>
-    <option value="servicio">Servicio Profesional (IVA 19%)</option>
-</select>
+    <label>Monto Base ($ COP)</label>
+    <input type="number" id="monto" min="0.01" step="0.01" placeholder="Ingresa el valor sin IVA">
 
-<label>Monto Base ($ COP)</label>
-<input type="number" id="monto" min="0.01" step="0.01" placeholder="Ingresa el valor sin IVA">
+    <div class="botones">
+        <button class="agregar" onclick="agregar()">Agregar Concepto</button>
+        <button class="excel" onclick="exportarExcel()">Exportar a Excel</button>
+    </div>
 
-<div class="botones">
-    <button class="agregar" onclick="agregar()">Agregar Concepto</button>
-    <button class="excel" onclick="exportarExcel()">Exportar a Excel</button>
-</div>
-
-<table>
-<thead>
-<tr>
-    <th>Tipo de Concepto</th>
-    <th>Monto Base ($)</th>
-    <th>Valor IVA ($)</th>
-    <th>Total con IVA ($)</th>
-    <th>Acciones</th>
-</tr>
-</thead>
-<tbody id="tabla"></tbody>
-</table>
-
+    <table>
+        <thead>
+            <tr>
+                <th>Tipo de Concepto</th>
+                <th>Monto Base ($)</th>
+                <th>Valor IVA ($)</th>
+                <th>Total con IVA ($)</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody id="tabla"></tbody>
+    </table>
 </div>
 
 <script>
-let datos = JSON.parse(localStorage.getItem("cuentasLuis")) || [];
+// === FUNCIONALIDAD INTERACTIVA ===
+const contenedorElementos = document.getElementById('contenedorElementos');
+const colores = ['var(--color-principal)', 'var(--color-secundario)', 'var(--color-terciario)'];
 
-function f(n){ return n.toLocaleString('es-CO', {minimumFractionDigits: 2, maximumFractionDigits: 2}); }
-
-function guardar(){
-    localStorage.setItem("cuentasLuis", JSON.stringify(datos));
-    recalcular();
-}
-
-function recalcular(){
-    let b=0,i=0,t=0;
-    datos.forEach(d=>{
-        b+=d.base;
-        i+=d.iva;
-        t+=d.total;
-    });
-    totalBase.innerText="$ "+f(b);
-    totalIVA.innerText="$ "+f(i);
-    totalGeneral.innerText="$ "+f(t);
-    render();
-}
-
-function render(){
-    tabla.innerHTML="";
-    const tipoTexto = {
-        material: "Material (IVA 19%)",
-        mano: "Mano de Obra (IVA 0%)",
-        servicio: "Servicio Profesional (IVA 19%)"
-    };
-    datos.forEach((d,idx)=>{
-        tabla.innerHTML+=`
-        <tr>
-            <td>${tipoTexto[d.tipo]}</td>
-            <td>$ ${f(d.base)}</td>
-            <td>$ ${f(d.iva)}</td>
-            <td>$ ${f(d.total)}</td>
-            <td class="acciones">
-                <button class="editar" onclick="editar(${idx})">✏️ Editar</button>
-                <button class="borrar" onclick="borrar(${idx})">❌ Borrar</button>
-            </td>
-        </tr>`;
-    });
-}
-
-function agregar(){
-    let tipo = document.getElementById("tipo").value;
-    let base = parseFloat(document.getElementById("monto").value);
-    if(!base || base<=0) return alert("Por favor ingresa un monto válido mayor a cero");
-
-    let ivaP = (tipo==="mano") ? 0 : 19;
-    let iva = parseFloat((base * ivaP / 100).toFixed(2));
-    let total = parseFloat((base + iva).toFixed(2));
-
-    datos.push({tipo,base,iva,total});
-    guardar();
-    document.getElementById("monto").value="";
-}
-
-function borrar(i){
-    if(!confirm("¿Estás seguro de que quieres eliminar este concepto?")) return;
-    datos.splice(i,1);
-    guardar();
-}
-
-function editar(i){
-    let nuevoMonto = prompt("Ingresa el nuevo monto base:", datos[i].base);
-    if(!nuevoMonto) return;
-    nuevoMonto = parseFloat(nuevoMonto);
-    if(!nuevoMonto || nuevoMonto<=0){
-        alert("Monto inválido, ingresa un valor mayor a cero");
-        return;
+// Crear estrellas iniciales
+function crearEstrellasIniciales() {
+    for(let i=0; i<50; i++) {
+        crearEstrella(
+            Math.random() * window.innerWidth,
+            Math.random() * window.innerHeight,
+            colores[Math.floor(Math.random() * colores.length)]
+        );
     }
-    let ivaP = (datos[i].tipo==="mano") ? 0 : 19;
-    datos[i].base = nuevoMonto;
-    datos[i].iva = parseFloat((nuevoMonto * ivaP / 100).toFixed(2));
-    datos[i].total = parseFloat((datos[i].base + datos[i].iva).toFixed(2));
-    guardar();
 }
 
-function exportarExcel(){
-    let html=document.querySelector("table").outerHTML;
-    let blob=new Blob([html],{type:'application/vnd.ms-excel'});
-    let a=document.createElement("a");
-    a.href=URL.createObjectURL(blob);
-    a.download="Registro_Pagina_de_Luis.xls";
-    a.click();
-}
-
-for(let i=0;i<70;i++){
-    let s=document.createElement("div");
-    s.className="estrella";
-    s.style.left=Math.random()*100+"vw";
-    s.style.animationDuration=(3+Math.random()*5)+"s";
-    s.style.animationDelay=(Math.random()*3)+"s";
-    estrellas.appendChild(s);
-}
-
-recalcular();
-</script>
-
-</body>
-</html>
+// Crear estrella en posición específica
+function crearEstrella(x, y, color) {
+    const estrella = document.createElement('div');
+    estrella.className = 'estrella-interactiva';
+    estrella.style.left = x + 'px';
+    estrella.style.top = y + 'px';
+    estrella.style.width = (3 + Math.random() * 8) + 'px';
+    estrella.style.height = estrella.style.width;
+    estrella.style.borderColor = color
